src/jminusminus/Parser.java
// Copyright 2013 Bill Campbell, Swami Iyer and Bahar Akbal-Delibas

package jminusminus;

import java.util.ArrayList;

import static jminusminus.TokenKind.*;

/**
 * A recursive descent parser that, given a lexical analyzer (a
 * {@link LookaheadScanner}), parses a Java compilation unit (program file),
 * taking tokens from the LookaheadScanner, and produces an abstract syntax tree
 * (AST) for it.
 * <p>
 * See Appendix C.2.2 in the textbook or the
 * <a href="https://docs.oracle.com/javase/specs/jls/se8/html/index.html">Java
 * Language Specifications</a> for the full syntactic grammar.
 */

public class Parser {

    /** The lexical analyzer with which tokens are scanned. */
    private LookaheadScanner scanner;

    /** Whether a parser error has been found. */
    private boolean isInError;

    /** Whether we have recovered from a parser error. */
    private boolean isRecovered;

    /**
     * Constructs a parser from the given lexical analyzer.
     * 
     * @param scanner the lexical analyzer with which tokens are scanned.
     */

    public Parser(LookaheadScanner scanner) {
        this.scanner = scanner;
        isInError = false;
        isRecovered = true;
        scanner.next(); // Prime the pump
    }

    /**
     * Has a parser error occurred up to now?
     * 
     * @return {@code true} if a parser error occurred; {@code false} otherwise.
     */

    public boolean errorHasOccurred() {
        return isInError;
    }

    // ////////////////////////////////////////////////
    // Parsing Support ///////////////////////////////
    // ////////////////////////////////////////////////

    /**
     * Is the current token this one?
     * 
     * @param sought the token we're looking for.
     * @return true iff they match; false otherwise.
     */

    private boolean see(TokenKind sought) {
        return (sought == scanner.token().kind());
    }

    /**
     * Look at the current (unscanned) token to see if it's one we're looking for.
     * If so, scan it and return true; otherwise return false (without scanning a
     * thing).
     * 
     * @param sought the token we're looking for.
     * @return true iff they match; false otherwise.
     */

    private boolean have(TokenKind sought) {
        if (see(sought)) {
            scanner.next();
            return true;
        } else {
            return false;
        }
    }

    /**
     * Attempt to match a token we're looking for with the current input token. If
     * we succeed, scan the token and go into a "isRecovered" state. If we fail,
     * then what we do next depends on whether or not we're currently in a
     * "isRecovered" state: if so, we report the error and go into an "Unrecovered"
     * state; if not, we repeatedly scan tokens until we find the one we're looking
     * for (or EOF) and then return to a "isRecovered" state. This gives us a kind
     * of poor man's syntactic error recovery. The strategy is due to David Turner
     * and Ron Morrison.
     * 
     * @param sought the token we're looking for.
     */

    private void mustBe(TokenKind sought) {
        if (scanner.token().kind() == sought) {
            scanner.next();
            isRecovered = true;
        } else if (isRecovered) {
            isRecovered = false;
            reportParserError("%s found where %s sought", scanner.token().image(), sought.image());
        } else {
            // Do not report the (possibly spurious) error,
            // but rather attempt to recover by forcing a match.
            while (!see(sought) && !see(EOF)) {
                scanner.next();
            }
            if (see(sought)) {
                scanner.next();
                isRecovered = true;
            }
        }
    }

    /**
     * Pull out the ambiguous part of a name and return it.
     * 
     * @param name with an ambiguos part (possibly).
     * @return ambiguous part or null.
     */

    private AmbiguousName ambiguousPart(TypeName name) {
        String qualifiedName = name.toString();
        int lastDotIndex = qualifiedName.lastIndexOf('.');
        return lastDotIndex == -1 ? null // It was a simple
                // name
                : new AmbiguousName(name.line(), qualifiedName.substring(0, lastDotIndex));
    }

    /**
     * Report a syntax error.
     * 
     * @param message message identifying the error.
     * @param args    related values.
     */

    private void reportParserError(String message, Object... args) {
        isInError = true;
        isRecovered = false;
        System.err.printf("%s:%d: ", scanner.fileName(), scanner.token().line());
        System.err.printf(message, args);
        System.err.println();
    }

    // ////////////////////////////////////////////////
    // Lookahead /////////////////////////////////////
    // ////////////////////////////////////////////////

    /**
     * Are we looking at an BLOCK started by a LCURLY? Look ahead to find out.
     * 
     * @return true iff we're looking at BLOCK; false otherwise.
     */
    private boolean seeBlock() {
        scanner.recordPosition();
        if (!have(LCURLY)) {
            scanner.returnToPosition();
            return false;
        }
        scanner.returnToPosition();
        return true;
    }

    private boolean seeModifier() {
        if (see(PUBLIC)) {
            return true;
        }
        if (see(PROTECTED)) {
            return true;
        }
        if (see(PRIVATE)) {
            return true;
        }
        if (see(STATIC)) {
            return true;
        }
        if (see(ABSTRACT)) {
            return true;
        }
        if (see(FINAL)) {
            return true;
        }
        return false;
    }

    /**
     * Are we looking at an IDENTIFIER followed by a LPAREN? Look ahead to find out.
     * 
     * @return true iff we're looking at IDENTIFIER LPAREN; false otherwise.
     */

    private boolean seeIdentLParen() {
        scanner.recordPosition();
        boolean result = have(IDENTIFIER) && see(LPAREN);
        scanner.returnToPosition();
        return result;
    }

    /**
     * Are we looking at a cast? ie.
     * 
     * <pre>
     *   LPAREN type RPAREN ...
     * </pre>
     * 
     * Look ahead to find out.
     * 
     * @return true iff we're looking at a cast; false otherwise.
     */

    private boolean seeCast() {
        scanner.recordPosition();
        if (!have(LPAREN)) {
            scanner.returnToPosition();
            return false;
        }
        if (seeBasicType()) {
            scanner.returnToPosition();
            return true;
        }
        if (!see(IDENTIFIER)) {
            scanner.returnToPosition();
            return false;
        } else {
            scanner.next(); // Scan the IDENTIFIER
            // A qualified identifier is ok
            while (have(DOT)) {
                if (!have(IDENTIFIER)) {
                    scanner.returnToPosition();
                    return false;
                }
            }
        }
        while (have(LBRACK)) {
            if (!have(RBRACK)) {
                scanner.returnToPosition();
                return false;
            }
        }
        if (!have(RPAREN)) {
            scanner.returnToPosition();
            return false;
        }
        scanner.returnToPosition();
        return true;
    }

    /**
     * Are we looking at a local variable declaration? ie.
     * 
     * <pre>
     *   [FINAL] type IDENTIFIER {LBRACK RBRACK} ...
     * </pre>
     * 
     * Look ahead to determine.
     * 
     * @return true iff we are looking at local variable declaration; false
     *         otherwise.
     */

    private boolean seeLocalVariableDeclaration() {
        scanner.recordPosition();
        have(FINAL);
        if (have(IDENTIFIER)) {
            // A qualified identifier is ok
            while (have(DOT)) {
                if (!have(IDENTIFIER)) {
                    scanner.returnToPosition();
                    return false;
                }
            }
        } else if (seeBasicType()) {
            scanner.next();
        } else {
            scanner.returnToPosition();
            return false;
        }
        while (have(LBRACK)) {
            if (!have(RBRACK)) {
                scanner.returnToPosition();
                return false;
            }
        }
        if (!have(IDENTIFIER)) {
            scanner.returnToPosition();
            return false;
        }
        while (have(LBRACK)) {
            if (!have(RBRACK)) {
                scanner.returnToPosition();
                return false;
            }
        }
        scanner.returnToPosition();
        return true;
    }

    /**
     * Are we looking at a for-each statement variable declaration? ie.
     * 
     * <pre>
     *   type IDENTIFIER COL
     * </pre>
     * 
     * Look ahead to determine.
     * 
     * @return true iff we are looking at a for-each statement variable declaration;
     *         false otherwise.
     */

    private boolean seeForEachVariable() {
        scanner.recordPosition();
        have(FINAL);

        if (have(IDENTIFIER)) {
            // A qualified identifier is ok
            while (have(DOT)) {
                if (!have(IDENTIFIER)) {
                    scanner.returnToPosition();
                    return false;
                }
            }
        } else if (seeBasicType()) {
            scanner.next();
        } else {
            scanner.returnToPosition();
            return false;
        }

        if (!have(IDENTIFIER)) {
            scanner.returnToPosition();
            return false;
        }

        if (!have(COL)) {
            scanner.returnToPosition();
            return false;
        }

        scanner.returnToPosition();
        return true;
    }

    /**
     * Are we looking at a basic type? ie.
     * 
     * <pre>
     * BOOLEAN | CHAR | INT
     * </pre>
     * 
     * @return true iff we're looking at a basic type; false otherwise.
     */

    private boolean seeBasicType() {
        return (see(BOOLEAN) || see(CHAR) || see(INT) || see(DOUBLE));
    }

    /**
     * Are we looking at a reference type? ie.
     * 
     * <pre>
     *   referenceType ::= basicType LBRACK RBRACK {LBRACK RBRACK}
     *                   | qualifiedIdentifier {LBRACK RBRACK}
     * </pre>
     * 
     * @return true iff we're looking at a reference type; false otherwise.
     */

    private boolean seeReferenceType() {
        if (see(IDENTIFIER)) {
            return true;
        } else {
            scanner.recordPosition();
            if (have(BOOLEAN) || have(CHAR) || have(INT)) {
                if (have(LBRACK) && see(RBRACK)) {
                    scanner.returnToPosition();
                    return true;
                }
            }
            scanner.returnToPosition();
        }
        return false;
    }

    /**
     * Are we looking at a qualified identifier and NOT just an identifier? ie.
     * 
     * <pre>
     *   qualifiedIdentifier ::= IDENTIFIER DOT IDENTIFIER {DOT IDENTIFIER}
     * </pre>
     * 
     * @return true iff we're looking at a qualified identifier; false otherwise.
     */

    private boolean seeQualifiedIdentifier() {
        scanner.recordPosition();
        if (have(IDENTIFIER)) {
            if (!have(DOT)) {
                scanner.returnToPosition();
                return false;
            }
            scanner.returnToPosition();
            return true;
        }
        return false;
    }

    /**
     * Are we looking at []?
     * 
     * @return true iff we're looking at a [] pair; false otherwise.
     */

    private boolean seeDims() {
        scanner.recordPosition();
        boolean result = have(LBRACK) && see(RBRACK);
        scanner.returnToPosition();
        return result;
    }

    // ////////////////////////////////////////////////
    // Parser Proper /////////////////////////////////
    // ////////////////////////////////////////////////

    /**
     * Parses a compilation unit (a program file) and constructs an AST for it.
     * After constructing the Parser, this is its entry point.
     * 
     * <pre>
     *   compilationUnit ::= [PACKAGE qualifiedIdentifier SEMI]
     *                       {IMPORT  qualifiedIdentifier SEMI}
     *                       {typeDeclaration}
     *                       EOF
     * </pre>
     * 
     * @return an AST for a compilationUnit.
     */

    public JCompilationUnit compilationUnit() {
        int line = scanner.token().line();
        TypeName packageName = null; // Default
        if (have(PACKAGE)) {
            packageName = qualifiedIdentifier();
            mustBe(SEMI);
        }
        ArrayList<TypeName> imports = new ArrayList<TypeName>();
        while (have(IMPORT)) {
            imports.add(qualifiedIdentifier());
            mustBe(SEMI);
        }
        ArrayList<JAST> typeDeclarations = new ArrayList<JAST>();
        while (!see(EOF)) {
            JAST typeDeclaration = typeDeclaration();
            if (typeDeclaration != null) {
                typeDeclarations.add(typeDeclaration);
            } else {
                break;
            }
        }
        mustBe(EOF);
        return new JCompilationUnit(scanner.fileName(), line, packageName, imports, typeDeclarations);
    }

    /**
     * Parse a qualified identifier.
     * 
     * <pre>
     *   qualifiedIdentifier ::= IDENTIFIER {DOT IDENTIFIER}
     * </pre>
     * 
     * @return an instance of TypeName.
     */

    private TypeName qualifiedIdentifier() {
        int line = scanner.token().line();
        mustBe(IDENTIFIER);
        String qualifiedIdentifier = scanner.previousToken().image();
        while (have(DOT)) {
            mustBe(IDENTIFIER);
            qualifiedIdentifier += "." + scanner.previousToken().image();
        }
        return new TypeName(line, qualifiedIdentifier);
    }

    /**
     * Parse a type declaration.
     * 
     * <pre>
     *   typeDeclaration ::= modifiers (classDeclaration | interfaceDeclaration)
     * </pre>
     * 
     * @return an AST for a typeDeclaration.
     */

    private JAST typeDeclaration() {
        ArrayList<String> mods = modifiers();
        JAST decl = null;
        if (see(CLASS)) {
            decl = classDeclaration(mods);
        } else if (see(INTERFACE)) {
            decl = interfaceDeclaration(mods);
        } else {
            reportParserError("Expected class or interface");
        }
        return decl;
    }

    /**
     * Parse modifiers.
     * 
     * <pre>
     *   modifiers ::= {PUBLIC | PROTECTED | PRIVATE | STATIC | 
     *                  ABSTRACT | FINAL}
     * </pre>
     * 
     * Check for duplicates, and conflicts among access modifiers (public,
     * protected, and private). Otherwise, no checks.
     * 
     * @return a list of modifiers.
     */

    private ArrayList<String> modifiers() {
        ArrayList<String> mods = new ArrayList<String>();
        boolean scannedPUBLIC = false;
        boolean scannedPROTECTED = false;
        boolean scannedPRIVATE = false;
        boolean scannedSTATIC = false;
        boolean scannedABSTRACT = false;
        boolean scannedFINAL = false;
        boolean more = true;
        while (more)
            if (have(PUBLIC)) {
                mods.add("public");
                if (scannedPUBLIC) {
                    reportParserError("Repeated modifier: public");
                }
                if (scannedPROTECTED || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPUBLIC = true;
            } else if (have(PROTECTED)) {
                mods.add("protected");
                if (scannedPROTECTED) {
                    reportParserError("Repeated modifier: protected");
                }
                if (scannedPUBLIC || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPROTECTED = true;
            } else if (have(PRIVATE)) {
                mods.add("private");
                if (scannedPRIVATE) {
                    reportParserError("Repeated modifier: private");
                }
                if (scannedPUBLIC || scannedPROTECTED) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPRIVATE = true;
            } else if (have(STATIC)) {
                mods.add("static");
                if (scannedSTATIC) {
                    reportParserError("Repeated modifier: static");
                }
                scannedSTATIC = true;
            } else if (have(ABSTRACT)) {
                mods.add("abstract");
                if (scannedABSTRACT) {
                    reportParserError("Repeated modifier: abstract");
                }
                scannedABSTRACT = true;
            } else if (have(FINAL)) {
                mods.add("final");
                if (scannedFINAL) {
                    reportParserError("Repeated modifier: final");
                }
                scannedFINAL = true;
            } else {
                more = false;
            }
        return mods;
    }

    /**
     * Parse a class declaration.
     * 
     * <pre>
     *   classDeclaration ::= CLASS IDENTIFIER 
     *                        [EXTENDS qualifiedIdentifier]
     *                        [IMPLEMENTS qualifiedIdentifier {, qualifiedIdentifier}]
     *                        LCURLY classBody RCURLY
     * </pre>
     * 
     * A class which doesn't explicitly extend another (super) class implicitly
     * extends the superclass java.lang.Object.
     * 
     * @param mods the class modifiers.
     * @return an AST for a classDeclaration.
     */

    private JClassDeclaration classDeclaration(ArrayList<String> mods) {
        ArrayList<Type> implement = new ArrayList<>();
        Type superClass;

        int line = scanner.token().line();
        mustBe(CLASS);
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();

        if (have(EXTENDS)) {
            TypeName ext = qualifiedIdentifier();
            superClass = ext;
        } else {
            superClass = Type.OBJECT;
        }
        if (have(IMPLEMENTS)) {
            TypeName impl = qualifiedIdentifier();
            implement.add(impl);
            while (!see(LCURLY) && !see(EOF)) {
                mustBe(COMMA);
                impl = qualifiedIdentifier();
                implement.add(impl);
            }
        }
        mustBe(LCURLY);
        ArrayList<JMember> members = new ArrayList<>();
        ArrayList<JBlock> IIB = new ArrayList<>();
        ArrayList<JBlock> SIB = new ArrayList<>();
        consumeClassBody(members, SIB, IIB);
        mustBe(RCURLY);
        return new JClassDeclaration(line, mods, name, superClass, implement, members, SIB, IIB);
    }

    /**
     * Parse an interface declaration.
     * 
     * <pre>
     *
     *interfaceDeclaration ::= INTERFACE IDENTIFIER
     *                            [EXTENDS qualifiedIdentifier {COMMA qualifiedIdentifier}]
     *                            interfaceBody
     * </pre>
     * 
     * 
     * @param mods the interface modifiers.
     * @return an AST for a interfaceDeclaration.
     */

    private JInterfaceDeclaration interfaceDeclaration(ArrayList<String> mods) {
        Type superClass;

        int line = scanner.token().line();
        mustBe(INTERFACE);
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        ArrayList<Type> interfaces = new ArrayList<>();

        if (have(EXTENDS)) {
            interfaces.add(qualifiedIdentifier());
            while (!see(LCURLY)) {
                mustBe(COMMA);
                interfaces.add(qualifiedIdentifier());
            }
        }

        return new JInterfaceDeclaration(line, mods, name, interfaces, interfaceBody());
    }

    /**
     * Parse a class body.
     * 
     * <pre>
    
        classBody ::=  {(SEMI
                         | modifiers memberDecl
                         | STATIC block 
                         | block)
                       }
                       RCURLY
     * 
     * </pre>
     * 
     * @return list of members in the class body.
     */

    private void consumeClassBody(ArrayList<JMember> members, ArrayList<JBlock> SIB, ArrayList<JBlock> IIB) {
        boolean error = false;
        while (!see(RCURLY) && !see(EOF)) {
            scanner.errorHasOccured();

            if (have(SEMI)) {
                // Do nothing
            } else if (see(STATIC)) {
                scanner.recordPosition();
                boolean isStaticBlock = have(STATIC);
                isStaticBlock &= see(LCURLY);
                scanner.returnToPosition();
                if (isStaticBlock) {
                    mustBe(STATIC);
                    ArrayList<String> mods = new ArrayList<String>();
                    mods.add("static");
                    SIB.add(block(mods));
                } else {
                    members.add(memberDecl(modifiers()));
                }
            } else if (seeModifier() || seeBasicType() || seeReferenceType() || see(VOID)) {
                members.add(memberDecl(modifiers()));
            } else if (seeBlock()) {
                IIB.add(block());
            } else {
                error = true;
                break;
            }
        }
        if (error) {
            reportParserError("classBody sought where %s found", scanner.token().image());
        }
    }

    /**
     * Parse an interface body
     * 
     * <pre>
     *      interfaceBody ::= LCURLY
     *                       { modifiers interfaceMemberDecl }
     *                        RCURLY
     * </pre>
     *
     * @return methods founds
     */
    private ArrayList<JMember> interfaceBody() {
        ArrayList<JMember> members = new ArrayList<>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            members.add(interfaceMemberDecl(modifiers()));
        }
        mustBe(RCURLY);
        return members;
    }

    /**
     * Parse a member declaration.
     * 
     * <pre>
     *   memberDecl ::= IDENTIFIER            // constructor
     *                  formalParameters
     *                  [THROWS qualifiedIdentifier {, qualifiedIdentifier}] block
     *                | (VOID | type) IDENTIFIER  // method
     *                  formalParameters
     *                  [THROWS qualifiedIdentifier {, qualifiedIdentifier}] (block | SEMI)
     *                | type variableDeclarators SEMI // field
     * </pre>
     * 
     * @param mods the class member modifiers.
     * @return an AST for a memberDecl.
     */

    private JMember memberDecl(ArrayList<String> mods) {
        int line = scanner.token().line();
        JMember memberDecl = null;
        if (seeIdentLParen()) {
            // A constructor
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters();
            ArrayList<TypeName> exceptions = new ArrayList<TypeName>();
            if (have(THROWS)) {
                while (!see(LCURLY)) {
                    exceptions.add(qualifiedIdentifier());
                }
            }
            JBlock body = block();
            memberDecl = new JConstructorDeclaration(line, mods, name, params, exceptions, body);
        } else {
            Type type = null;
            if (have(VOID)) {// void method
                type = Type.VOID;
                mustBe(IDENTIFIER);
                String name = scanner.previousToken().image();
                ArrayList<JFormalParameter> params = formalParameters();
                ArrayList<TypeName> exceptions = new ArrayList<TypeName>();
                if (have(THROWS)) {
                    while (!see(LCURLY)) {
                        exceptions.add(qualifiedIdentifier());
                    }
                }
                JBlock body = have(SEMI) ? null : block();
                memberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, body);
            } else {// Non void method
                type = type();
                if (seeIdentLParen()) {
                    mustBe(IDENTIFIER);
                    String name = scanner.previousToken().image();
                    ArrayList<JFormalParameter> params = formalParameters();
                    ArrayList<TypeName> exceptions = new ArrayList<TypeName>();
                    if (have(THROWS)) {
                        while (!see(LCURLY)) {
                            exceptions.add(qualifiedIdentifier());
                        }
                    }
                    JBlock body = have(SEMI) ? null : block();
                    memberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, body);
                } else {
                    // Field
                    memberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
                    mustBe(SEMI);
                }
            }
        }
        return memberDecl;
    }

    /**
     * Parse an interface member declaration.
     *
     * <pre>
     *interfaceMemberDecl ::= interfaceDeclaration
     *                       | (VOID | type) <identifier> // method
     *                           formalParameters
     *                             [THROWS qualifiedIdentifier {, qualifiedIdentifier}] block
     *                       | type variableDeclarators SEMI // field
     * </pre>
     *
     * @param mods the class member modifiers.
     * @return an AST for a memberDecl.
     */

    private JMember interfaceMemberDecl(ArrayList<String> mods) {
        // Modifier rules for interfaces
        // Public by default
        if (!mods.contains("public")) {
            mods.add("public");
        }

        int line = scanner.token().line();
        JMember interfaceMemberDecl = null;
        Type type = null;
        if (have(VOID)) {
            // Methods are also abstract by default
            if (!mods.contains("abstract")) {
                mods.add("abstract");
            }
            // void method
            type = Type.VOID;
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters();
            ArrayList<TypeName> exceptions = new ArrayList<TypeName>();
            if (see(THROWS)) {
                exceptions.add(qualifiedIdentifier());
            }
            mustBe(SEMI);
            interfaceMemberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, null);
        } else {
            type = type();
            if (seeIdentLParen()) {
                // Methods are also abstract by default
                if (!mods.contains("abstract")) {
                    mods.add("abstract");
                }
                // Non void method
                mustBe(IDENTIFIER);
                String name = scanner.previousToken().image();
                ArrayList<JFormalParameter> params = formalParameters();
                ArrayList<TypeName> exceptions = new ArrayList<TypeName>();
                if (see(THROWS)) {
                    exceptions.add(qualifiedIdentifier());
                }
                mustBe(SEMI);
                interfaceMemberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, null);
            } else {
                // Field
                // Variables are also both static and final by default
                if (!mods.contains("static")) {
                    mods.add("static");
                }
                if (!mods.contains("final")) {
                    mods.add("final");
                }
                interfaceMemberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
                mustBe(SEMI);
            }
        }
        return interfaceMemberDecl;
    }

    /**
     * Parse a non static block.
     * 
     * <pre>
     *   block ::= LCURLY {blockStatement} RCURLY
     * </pre>
     * 
     * @return an AST for a block.
     */

    private JBlock block() {
        int line = scanner.token().line();
        ArrayList<JStatement> statements = new ArrayList<JStatement>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            statements.add(blockStatement());
        }
        mustBe(RCURLY);
        return new JBlock(line, statements);
    }

    /**
     * Parse a block.
     * 
     * <pre>
     *   block ::= LCURLY {blockStatement} RCURLY
     * </pre>
     * 
     * @return an AST for a block.
     */

    private JBlock block(ArrayList<String> mods) {
        int line = scanner.token().line();
        ArrayList<JStatement> statements = new ArrayList<JStatement>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            statements.add(blockStatement());
        }
        mustBe(RCURLY);
        return new JBlock(line, statements, mods);
    }

    /**
     * Parse a block statement.
     * 
     * <pre>
     *   blockStatement ::= localVariableDeclarationStatement
     *                    | statement
     * </pre>
     * 
     * @return an AST for a blockStatement.
     */

    private JStatement blockStatement() {
        if (seeLocalVariableDeclaration()) {
            return localVariableDeclarationStatement();
        } else {
            return statement();
        }
    }

    /**
     * Parse a statement.
     * 
     * <pre>
     *   statement ::= block
     *                 | IF parExpression statement [ELSE statement]
     *                 | WHILE parExpression statement 
     *                 | TRY block 
     *                   CATCH ( formalParameter ) block
     *                   [FINALLY block]
     *                 | THROW expression SEMI
     *                 | FOR forExpression
     *                 | RETURN [expression] SEMI
     *                 | SEMI 
     *                 | statementExpression SEMI
     * </pre>
     * 
     * @return an AST for a statement.
     */

    private JStatement statement() {
        int line = scanner.token().line();
        if (see(LCURLY)) {
            return block();
        } else if (have(IF)) {
            JExpression test = parExpression();
            JStatement consequent = statement();
            JStatement alternate = have(ELSE) ? statement() : null;
            return new JIfStatement(line, test, consequent, alternate);
        } else if (have(WHILE)) {
            JExpression test = parExpression();
            JStatement statement = statement();
            return new JWhileStatement(line, test, statement);
        } else if (have(TRY)) {
            JBlock tryBlock = block();

            ArrayList<JFormalParameter> catchParams = new ArrayList<>();
            ArrayList<JBlock> catchBlocks = new ArrayList<>();

            while (have(CATCH)) {
                mustBe(LPAREN);
                catchParams.add(formalParameter());
                mustBe(RPAREN);
                catchBlocks.add(block());
            }
            /*
             * mustBe(CATCH); mustBe(LPAREN); JFormalParameter catchParam =
             * formalParameter(); mustBe(RPAREN);
             * 
             * JBlock catchBlock = block();
             */
            JBlock finallyBlock = have(FINALLY) ? block() : null;
            return new JTryCatchStatement(line, tryBlock, catchParams, catchBlocks, finallyBlock);
        } else if (have(THROW)) {
            JExpression expression = expression();
            mustBe(SEMI);
            return new JThrowStatement(line, expression);
        } else if (have(FOR)) {
            return forStatement();
        } else if (have(RETURN)) {
            if (have(SEMI)) {
                return new JReturnStatement(line, null);
            } else {
                JExpression expr = expression();
                mustBe(SEMI);
                return new JReturnStatement(line, expr);
            }
        } else if (have(SEMI)) {
            return new JEmptyStatement(line);
        } else { // Must be a statementExpression
            JStatement statement = statementExpression();
            mustBe(SEMI);
            return statement;
        }
    }

    /**
     * Parse a for statement.
     * 
     * forStatement ::= LPAREN [forInit] SEMI [expression] SEMI [forUpdate] RPAREN statement |
     *                   LPAREN [<FINAL>] type qualifiedIdentifier COL expression RPAREN statement
     * 
     * @return A JForStatement
     */
    private JForStatement forStatement() {
        // For Step
        ArrayList<JStatement> initStatements = new ArrayList<JStatement>();
        ArrayList<String> mods = new ArrayList<String>();
        ArrayList<JVariableDeclarator> initDeclarators = new ArrayList<JVariableDeclarator>();
        JVariableDeclaration initDeclaration = null;
        ArrayList<JStatement> stepStatements = new ArrayList<JStatement>();

        // For Each
        JSingleVariableDeclaration identifier = null;

        // Common
        Type varType = null;
        JExpression loopExpression = null;
        JStatement body = null;

        int line = scanner.token().line();
        mustBe(LPAREN);

        if (seeForEachVariable()) {
            if (have(FINAL)) {
                mods.add("final");
            }

            varType = type();
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            identifier = new JSingleVariableDeclaration(line, name, varType, mods);
            mustBe(COL);
            loopExpression = expression();
        } else {
            if (!see(SEMI)) {
                if (seeBasicType() || seeQualifiedIdentifier()) {
                    initDeclarators = variableDeclarators(type());
                    initDeclaration = new JVariableDeclaration(line, mods, initDeclarators);
                } else if (see(IDENTIFIER)) {
                    do {
                        initStatements.add(statementExpression());
                    } while (have(COMMA));
                } else {
                    reportParserError("Invalid for statement.");
                }
            }
            mustBe(SEMI);
            if (!see(SEMI)) {
                loopExpression = expression();
            }
            mustBe(SEMI);
            if (!see(RPAREN)) {
                stepStatements = forUpdate();
            }
        }
        mustBe(RPAREN);
        body = statement();

        if (identifier != null) {
            return new JForEachStatement(line, identifier, loopExpression, body);
        } else {
            return new JForStepStatement(line, initStatements, initDeclaration, loopExpression, stepStatements, body);
        }
    }
